--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/finder": "^3.0|^4.0",
         "symfony/twig-bundle": "^3.0|^4.0",
         "symfony/templating": "^3.0|^4.0",
-        "twig/twig": "^1.34|^2.4",
+        "twig/twig": "^1.34|^2.4|^3.1",
         "psr/log": "~1.0"
     },
     "require-dev": {
